syntax = "proto3";
import "google/protobuf/empty.proto";
option go_package = ".;proto";


service Inventory {
    rpc SetInv(GoodsInvInfo) returns(google.protobuf.Empty); // set stock
    rpc InvDetail(GoodsInvInfo) returns (GoodsInvInfo); // get stock info
    rpc Sell(SellInfo) returns (google.protobuf.Empty); // stock deduction
    rpc Reback(SellInfo) returns(google.protobuf.Empty); // Stock return
}

message GoodsInvInfo {
    int32 goodsId = 1;
    int32 num = 2;
}

message SellInfo {
    repeated GoodsInvInfo goodsInfo = 1;
    string orderSn = 2;
}